<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>app.narvi</groupId>
  <artifactId>protego-rules-signatures</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <exec.mainClass>app.narvi.protego.signatures.CreateSignature</exec.mainClass>
  </properties>

  <dependencies>
    <!--dependencies to thr signed project!-->
    <dependency>
      <groupId>app.narvi</groupId>
      <artifactId>protego-basic</artifactId>
      <version>0.8</version>
    </dependency>
    <dependency>
      <groupId>app.narvi</groupId>
      <artifactId>protego-basic</artifactId>
      <version>0.8</version>
      <type>test-jar</type>
    </dependency>
<!--    <dependency>-->
<!--    	<groupId>app.narvi</groupId>-->
<!--	    <artifactId>bluewhale</artifactId>-->
<!--	    <version>1.0.0-SNAPSHOT</version>-->
<!--      <classifier>thin-jar</classifier>-->
<!--    </dependency>-->

    <!--logging-->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.12</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>1.5.0</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.0</version>
    </dependency>

    <!--class bytecode-->
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.30.2-GA</version>
    </dependency>

    <!--jaml-->
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.2</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>22</source>
          <target>22</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>app.narvi.protego.signatures.CreateSignature</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>